@@ -1,3 +1,9 @@
+2010-11-19  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/disk/mdraid1x_linux.c (grub_mdraid_detect): Don't try to
+	retrieve the metadat sector if size isn't known.
+	* grub-core/disk/mdraid_linux.c (grub_mdraid_detect): Likewise.
+
 2010-11-18  Robert Millan  <rmh@gnu.org>
 
 	* grub-core/fs/btrfs.c (grub_btrfs_mount): Replace grub_strncmp()
